force-app/main/default/objects/QuoteItemCell__c/QuoteItemCell__c.object-meta.xml
<CustomObject>
    <label>Quote Item Cell</label>
    <nameField>
        <displayFormat>QIC-{0000000}</displayFormat>
        <label>Quote Item Cell</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Item Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>