force-app/main/default/objects/QuoteItemCell__c/fields/C001__c.field-meta.xml
<CustomField>
    <fullName>C001__c</fullName>
    <label>C001</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>