force-app/main/default/objects/QuoteItemCell__c/fields/C002__c.field-meta.xml
<CustomField>
    <fullName>C002__c</fullName>
    <label>C002</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>