force-app/main/default/objects/QuoteItemCell__c/fields/C003__c.field-meta.xml
<CustomField>
    <fullName>C003__c</fullName>
    <label>C003</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>