force-app/main/default/objects/QuoteItemCell__c/fields/QuoteItemId__c.field-meta.xml
<CustomField>
    <fullName>QuoteItemId__c</fullName>
    <label>Quote Item</label>
    <referenceTo>QuoteItem__c</referenceTo>
    <relationshipName>QuoteItemCells</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>